# commandio

./: .gitignore  CHANGES.rst  MANIFEST.in  README.md  README.rst  __init__.py  command.py  enums.py  fileio.py  iobase.py  pyproject.toml  setup.py  tempdir.py  tmpdir.py  util.py  workdir.py
commandio/: __init__.py  command.py  enums.py  fileio.py  iobase.py  logutil.py  tmpdir.py  tmpfile.py  util.py  workdir.py
commandio/tests/: __init__.py  test_01_iobase.py  test_fileio.py  test_tmpdir.py  test_workdir.py  tests.ipynb
deploy/: deploy.sh
doc/: build_docs.sh  contributing.md  requirements.txt
doc/source/: commandio.rst  commandio.tests.rst  conf.py  contributing.md  contributing.rst  doc.ipynb  history.rst  index.rst  installation.rst  modules.rst  quickstart.rst
tests/: test_01_iobase.py  test_tmpdir.py  test_workdir.py  tests.ipynb
