[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "commandio"
description = "Python package that logs and executes commands for the command line."
dynamic = ["version", "readme"]
keywords = ["Command line", "shell", "UNIX", "Windows"]
license = {text = "GNU General Public License"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]

# dependencies = [
#     "requests",
#     'importlib-metadata; python_version<"3.8"',
# ]

[tool.setuptools.dynamic]
version = {attr = "commandio.VERSION"}
readme = {file = ["README.rst"]}

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
my-script = "commandio"